# generic-time-series-objects

./: Cargo.toml  README.md  pyproject.toml
python/: test_ts.py  test_ts_data_class.py  tests.py
python/generic_time_series_objects/: __init__.py  tests.py  time_series_data_baseclass.py
python/rust_time_series_objects/: python-tests.py  tests.py
src/: lib.rs
