[project]
name = "rust-time-series-objects"
version = "0.1.0"
description = "Rust based Time Series Objects for Python"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
