[project]
name = "generic_time_series_objects"
version = "0.2.1"
description = "Generic Time Series Objects for Python"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "setuptools>=82.0.0",
]
dynamic = ["readme"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
